src_old/objects/Cycle__c.object
<CustomObject>
    <description>Cycle defines a Retailer cycle that includes a date range, type (e.g. Reset Cycle). Cycle is related to the Retailer and a Project.</description>
    <fields>
        <fullName>CycleEndDate__c</fullName>
        <description>The end date of the cycle (the Project End Date is auto-populated based upon this field).</description>
        <inlineHelpText>The end date of the cycle</inlineHelpText>
        <label>Cycle End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CycleStartDate__c</fullName>
        <description>The start date of the cycle (the Project Start Date is auto-populated based on this field).</description>
        <inlineHelpText>The start date of the cycle.</inlineHelpText>
        <label>Cycle Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CycleType__c</fullName>
        <description>A picklist that will specify the type of cycle.</description>
        <inlineHelpText>Choose the type of cycle.</inlineHelpText>
        <label>Cycle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchandising Cycle</fullName>
                    <default>true</default>
                    <label>Merchandising Cycle</label>
                </value>
                <value>
                    <fullName>Reset Cycle</fullName>
                </value>
                <value>
                    <fullName>Value 1</fullName>
                    <isActive>false</isActive>
                    <label>Value 1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetailerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RetailerAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cycles</relationshipLabel>
        <relationshipName>Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A search field that indicates the specific Retailer for this Cycle.</description>
        <inlineHelpText>Enter the retailer for this cycle.</inlineHelpText>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Cycles</relationshipLabel>
        <relationshipName>Cycles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>A field that indicates unique external ID for the Cycle.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique key for the cycle.</inlineHelpText>
        <label>UniqueKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CycleStartDate__c</columns>
        <columns>CycleEndDate__c</columns>
        <columns>CycleType__c</columns>
        <columns>Retailer__c</columns>
        <columns>UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Startdate</fullName>
        <active>true</active>
        <errorConditionFormula>CycleStartDate__c  &gt;  CycleEndDate__c</errorConditionFormula>
        <errorDisplayField>CycleStartDate__c</errorDisplayField>
        <errorMessage>Start date cannot come after the end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>checkEnddate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( CycleEndDate__c )</errorConditionFormula>
        <errorMessage>Invalid data</errorMessage>
    </validationRules>
</CustomObject>